--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "no-bitwise": 2,
     "camelcase": 2,
     "eqeqeq": 2,
+    "class-methods-use-this": 0,
     "wrap-iife": [2, "inside"],
     "no-use-before-define": [2, "nofunc"],
     "no-caller": 2,
