--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
     "uuid": "^3.1.0",
-    "chart.js": "2.6.0",
+    "chart.js": "^2.6.0",
     "font-awesome": "^4.7.0",
-    "react-chartjs-2": "2.6.1",
-    "simple-line-icons": "^2.4.1"
+    "react-chartjs-2": "^2.6.2",
+    "simple-line-icons": "^2.4.1",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
