--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/coderbd/react-starter.git"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-alpha.6",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
@@ -35,7 +35,7 @@
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
     "uuid": "^3.1.0",
-    "chart.js": "^2.6.0",
+    "chart.js": "^2.7.0",
     "font-awesome": "^4.7.0",
     "react-chartjs-2": "^2.6.2",
     "simple-line-icons": "^2.4.1",
@@ -44,11 +44,11 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.6.1",
+    "eslint": "^4.7.2",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
@@ -56,22 +56,23 @@
     "eslint-plugin-react": "^7.3.0",
     "html-webpack-plugin": "^2.30.1",
     "redux-logger": "^3.0.6",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
+    "webpack-hot-middleware": "^2.19.1",
+    "webpack-node-externals": "^1.6.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-hot-loader": "^1.3.0",
-    "css-loader": "^0.28.5",
+    "css-hot-loader": "^1.3.1",
+    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "node-sass": "^4.5.3",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "source-list-map": "^2.0.0",
     "style-loader": "^0.18.2",
-    "uglify-js": "^3.0.28",
+    "uglify-js": "^3.1.1",
     "url-loader": "^0.5.9"
   }
 }
